fixes issue #6, increases contrast and makes text larger

--- a/src/creator.scss
+++ b/src/creator.scss
@@ -182,8 +182,10 @@ label {
 }
 
 .CreatorAnswers input::placeholder {
-  font-size: 1.1rem;
+  font-size: 1.6rem;
   text-align: center;
+  color: #222;
+  text-shadow: none;
 }
 
 .CreatorAnswers input,
